--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,13 @@
     src: url(fonts/zrnic.ttf);
 }
 
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 html, body {
     padding: 0;
     margin: 0;
@@ -11,6 +18,26 @@ html, body {
     overflow: hidden;
 }
 
+.leaflet-bar.leaflet-control.leaflet-control-custom.dropdown-dark {
+    background-color: #2b2b2b;
+    color: #ffffff;
+    border: 1px solid #444444;
+    padding: 5px;
+    border-radius: 4px;
+}
+
+.leaflet-bar.leaflet-control.leaflet-control-custom.dropdown-dark option {
+    background-color: #2b2b2b;
+    color: #ffffff;
+}
+
+.leaflet-bar.leaflet-control.leaflet-control-custom.dropdown-dark select {
+    background-color: #2b2b2b;
+    color: #ffffff;
+    border: 1px solid #444444;
+    padding: 5px;
+    border-radius: 4px;
+}
 #map-container, #output-container {
     height: 100%;
 }
@@ -54,7 +81,7 @@ html, body {
 }
 
 #titleLabel {
-    font-size: 28px;
+    font-size: 15px;
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 10px;
